// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test validation Doesn't accept empty input for description 1`] = `
[
  {
    "location": "body",
    "msg": "Description can't be empty",
    "path": "description",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Test validation Doesn't accept empty input for name 1`] = `
[
  {
    "location": "body",
    "msg": "Name can't be empty",
    "path": "name",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Test validation Doesn't accept empty input for numberInStock 1`] = `
[
  {
    "location": "body",
    "msg": "Number in stock can't be empty",
    "path": "numberInStock",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Test validation Doesn't accept empty input for price 1`] = `
[
  {
    "location": "body",
    "msg": "Price can't be empty",
    "path": "price",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Test validation Doesn't accept just spaces for description 1`] = `
[
  {
    "location": "body",
    "msg": "Description can't be empty",
    "path": "description",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Test validation Doesn't accept just spaces for name 1`] = `
[
  {
    "location": "body",
    "msg": "Name can't be empty",
    "path": "name",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Test validation Doesn't accept just spaces for numberInStock 1`] = `
[
  {
    "location": "body",
    "msg": "Number in stock can't be empty",
    "path": "numberInStock",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Test validation Doesn't accept just spaces for price 1`] = `
[
  {
    "location": "body",
    "msg": "Price can't be empty",
    "path": "price",
    "type": "field",
    "value": "",
  },
]
`;

exports[`Test validation Only accepts numbers for number in stock 1`] = `
[
  {
    "location": "body",
    "msg": "Number in stock needs to be a number",
    "path": "numberInStock",
    "type": "field",
    "value": "not a number",
  },
]
`;

exports[`Test validation Only accepts property formatted prices 1`] = `
[
  {
    "location": "body",
    "msg": "Price needs to be in $x.xx format, e.g $3.86 or $287.00",
    "path": "price",
    "type": "field",
    "value": "32",
  },
]
`;
